force-app/main/default/objects/Offer__c/Offer__c.object-meta.xml
<CustomObject>
    <description>Cadastro de ofertas convergentes para serem oferecidas aos clientes Vivo conforme matriz de ofertas.</description>
    <label>Oferta</label>
    <nameField>
        <displayFormat>OFE-{000000}</displayFormat>
        <label>ID Oferta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ofertas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>