force-app/main/default/objects/Offer__c/fields/BroadBandAttribute__c.field-meta.xml
<CustomField>
    <fullName>BroadBandAttribute__c</fullName>
    <description>Velocidade da Banda Larga</description>
    <label>Velocidade Banda Larga</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Technology__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>