force-app/main/default/objects/Offer__c/fields/BroadbandDescription__c.field-meta.xml
<CustomField>
    <fullName>BroadbandDescription__c</fullName>
    <description>Descrição da Oferta Banda Larga</description>
    <label>Descrição Oferta Banda Larga</label>
    <length>255</length>
    <type>Text</type>
</CustomField>