force-app/main/default/objects/Offer__c/fields/BroadBandDiscount__c.field-meta.xml
<CustomField>
    <fullName>BroadBandDiscount__c</fullName>
    <description>Desconto do plano da Banda Larga</description>
    <label>Desconto Banda Larga</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>