force-app/main/default/objects/Offer__c/fields/BroadbandDiscountDuration__c.field-meta.xml
<CustomField>
    <fullName>BroadbandDiscountDuration__c</fullName>
    <description>Campo para preenchimento da duração do desconto sobre o preço da banda larga.</description>
    <label>Duração Desconto Banda Larga</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>