force-app/main/default/objects/Offer__c/fields/BroadbandPrice__c.field-meta.xml
<CustomField>
    <fullName>BroadbandPrice__c</fullName>
    <description>Preço do plano de Banda Larga</description>
    <label>BL Prateleira</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>