force-app/main/default/objects/Offer__c/fields/BroadbandPromoPrice__c.field-meta.xml
<CustomField>
    <fullName>BroadbandPromoPrice__c</fullName>
    <label>Preço Banda Larga Promo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>