force-app/main/default/objects/Offer__c/fields/BundleType__c.field-meta.xml
<CustomField>
    <fullName>BundleType__c</fullName>
    <description>Tipo do Pacote: 1P, 2P, 3P</description>
    <label>Modalidade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1P</fullName>
            </value>
            <value>
                <fullName>2P</fullName>
            </value>
            <value>
                <fullName>3P</fullName>
            </value>
            <value>
                <fullName>Duo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>