force-app/main/default/objects/Offer__c/fields/Cabinet__c.field-meta.xml
<CustomField>
    <fullName>Cabinet__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo para marcar se as ofertas possuem uma oferta de armario.</description>
    <label>Armário</label>
    <type>Checkbox</type>
</CustomField>