force-app/main/default/objects/Offer__c/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <description>Tipo de Cliente que a Oferta se aplica, utilizado apenas pela Ofertas de Retenção Móvel.</description>
    <inlineHelpText>Tipo de cliente que a oferta de retenção móvel se aplica.</inlineHelpText>
    <label>Tipo de Cliente da Oferta</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Móvel</fullName>
            </value>
            <value>
                <fullName>Totalizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>