force-app/main/default/objects/Offer__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <description>Campo para preenchimento do Ciclo de ofertas do tipo Book de Ofertas</description>
    <label>Ciclos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>