force-app/main/default/objects/Offer__c/fields/DDDOferta__c.field-meta.xml
<CustomField>
    <fullName>DDDOferta__c</fullName>
    <label>DDD Oferta</label>
    <length>2</length>
    <type>Text</type>
</CustomField>