force-app/main/default/objects/Offer__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Campo para detalhar a descrição das ofertas de Book de oferta.</description>
    <label>Descrição</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>