force-app/main/default/objects/Offer__c/fields/DiscountVac__c.field-meta.xml
<CustomField>
    <fullName>DiscountVac__c</fullName>
    <description>Campo para preenchimento do Desconto VAC para ofertas do tipo Book de Ofertas.</description>
    <label>Desc. VAC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>