force-app/main/default/objects/Offer__c/fields/Disney__c.field-meta.xml
<CustomField>
    <fullName>Disney__c</fullName>
    <description>Campo para preenchimento do valor do serviço Disney+ para ofertas do Book de ofertas.</description>
    <label>Disney+</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>