force-app/main/default/objects/Offer__c/fields/DisneyDiscount__c.field-meta.xml
<CustomField>
    <fullName>DisneyDiscount__c</fullName>
    <description>Campo utilizado para preenchimento do desconto do serviço Disney para ofertas de Book de ofertas.</description>
    <label>Desc. Disney+</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>