force-app/main/default/objects/Offer__c/fields/DisneyPromoPrice__c.field-meta.xml
<CustomField>
    <fullName>DisneyPromoPrice__c</fullName>
    <description>Campo para preenchimento do valor do serviço de Disney+ com o desconto para ofertas do Book de oferta.</description>
    <label>Disney+ Promo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>