force-app/main/default/objects/Offer__c/fields/FamilyPlan__c.field-meta.xml
<CustomField>
    <fullName>FamilyPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar se o plano Móvel se trata de Família.</description>
    <label>Plano Família</label>
    <type>Checkbox</type>
</CustomField>