force-app/main/default/objects/Offer__c/fields/FixedCampaignRTD__c.field-meta.xml
<CustomField>
    <fullName>FixedCampaignRTD__c</fullName>
    <description>Descrição da campanha.</description>
    <label>Campanha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>