force-app/main/default/objects/Offer__c/fields/FixedLineDescription__c.field-meta.xml
<CustomField>
    <fullName>FixedLineDescription__c</fullName>
    <description>Descrição da Oferta Voz</description>
    <label>Descrição Oferta Voz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>