force-app/main/default/objects/Offer__c/fields/FixedLineDiscount__c.field-meta.xml
<CustomField>
    <fullName>FixedLineDiscount__c</fullName>
    <description>Desconto do plano de Voz fixo</description>
    <label>Desconto Voz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>