force-app/main/default/objects/Offer__c/fields/FixedLineDiscountDuration__c.field-meta.xml
<CustomField>
    <fullName>FixedLineDiscountDuration__c</fullName>
    <description>Campo para preenchimento da duração do desconto sobre o preço da Voz.</description>
    <label>Duração Desconto Voz</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>