force-app/main/default/objects/Offer__c/fields/FixedLinePlanAttribute__c.field-meta.xml
<CustomField>
    <fullName>FixedLinePlanAttribute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para marcas ofertas que contemplam plano de Voz fixo</description>
    <label>Plano de Voz</label>
    <type>Checkbox</type>
</CustomField>