force-app/main/default/objects/Offer__c/fields/FixedLinePrice__c.field-meta.xml
<CustomField>
    <fullName>FixedLinePrice__c</fullName>
    <description>Preço do plano de Voz fixo</description>
    <label>Voz Prateleira</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>