force-app/main/default/objects/Offer__c/fields/FixedLinePromoPrice__c.field-meta.xml
<CustomField>
    <fullName>FixedLinePromoPrice__c</fullName>
    <label>Preço Voz Promo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>