force-app/main/default/objects/Offer__c/fields/HomeAssist__c.field-meta.xml
<CustomField>
    <fullName>HomeAssist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Assist</label>
    <type>Checkbox</type>
</CustomField>