force-app/main/default/objects/Offer__c/fields/HomeAssistPrice__c.field-meta.xml
<CustomField>
    <fullName>HomeAssistPrice__c</fullName>
    <label>Preço Home Assist</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>