force-app/main/default/objects/Offer__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <label>Instruções</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>