force-app/main/default/objects/Offer__c/fields/MobileDescription__c.field-meta.xml
<CustomField>
    <fullName>MobileDescription__c</fullName>
    <description>Descrição da Oferta Móvel</description>
    <label>Descrição Oferta Móvel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>