force-app/main/default/objects/Offer__c/fields/MobileInternetDescription__c.field-meta.xml
<CustomField>
    <fullName>MobileInternetDescription__c</fullName>
    <description>Descrição da Oferta Móvel Internet</description>
    <label>Descrição Oferta Móvel Internet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>