force-app/main/default/objects/Offer__c/fields/MobilePlan__c.field-meta.xml
<CustomField>
    <fullName>MobilePlan__c</fullName>
    <label>Plano Móvel</label>
    <type>TextArea</type>
</CustomField>