force-app/main/default/objects/Offer__c/fields/MobilePriceDiscount__c.field-meta.xml
<CustomField>
    <fullName>MobilePriceDiscount__c</fullName>
    <description>Valor do desconto móvel para ofertas de alta</description>
    <label>Desconto Móvel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>