force-app/main/default/objects/Offer__c/fields/NetflixPromoPrice__c.field-meta.xml
<CustomField>
    <fullName>NetflixPromoPrice__c</fullName>
    <label>Preço Netflix Promo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>