force-app/main/default/objects/Offer__c/fields/OfferCardDescription__c.field-meta.xml
<CustomField>
    <fullName>OfferCardDescription__c</fullName>
    <description>Campo utilizado para exibir a descrição das ofertas no card do componente de ofertas customizado</description>
    <formula>IF(CONTAINS(&quot;Fixa:AcquisitionFixed:BaseFixed&quot;, RecordType.DeveloperName),
IF(FixedLinePlanAttribute__c = False,&apos;&apos;,FixedLineDescription__c&amp;&apos; &apos;&amp;BR()&amp;BR())&amp;
IF(TVDescription__c = &apos;&apos;,TEXT(TVAttribute__c)&amp;&apos; &apos;&amp;BR()&amp;BR(),TVDescription__c&amp;&apos; &apos;&amp;BR()&amp;BR())&amp;
IF(TEXT(BroadBandAttribute__c) = &apos;&apos;,&apos;&apos;,TEXT(BroadBandAttribute__c)&amp;&apos; Mbps &apos;&amp;BroadbandDescription__c),


IF(RecordType.DeveloperName = &apos;Movel&apos;,
MobileDescription__c&amp;&apos; &apos;&amp;BR()&amp;MobileInternetDescription__c,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição da Oferta</label>
    <type>Text</type>
</CustomField>