force-app/main/default/objects/Offer__c/fields/OfferCode__c.field-meta.xml
<CustomField>
    <fullName>OfferCode__c</fullName>
    <label>Código da Oferta</label>
    <length>20</length>
    <type>Text</type>
</CustomField>