force-app/main/default/objects/Offer__c/fields/OfferDescriptionConcat__c.field-meta.xml
<CustomField>
    <fullName>OfferDescriptionConcat__c</fullName>
    <formula>&apos;Oferta contratada: &apos;+ MobileDescription__c +&apos;, &apos;+ MobilePlan__c +&apos; com &apos;+ MobileInternetDescription__c</formula>
    <label>Descrição oferta consolidada</label>
    <type>Text</type>
</CustomField>