force-app/main/default/objects/Offer__c/fields/OfferGroup__c.field-meta.xml
<CustomField>
    <fullName>OfferGroup__c</fullName>
    <label>Grupo de Oferta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Aquisição</fullName>
            </value>
            <value>
                <fullName>Retenção</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>