force-app/main/default/objects/Offer__c/fields/OfferLevel__c.field-meta.xml
<CustomField>
    <fullName>OfferLevel__c</fullName>
    <description>Campo para segmentar ofertas entre nível 1 e nível 2</description>
    <label>Nível Oferta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nivel_1</fullName>
                <label>Nível 1</label>
            </value>
            <value>
                <fullName>Nivel_2</fullName>
                <label>Nível 2</label>
            </value>
            <value>
                <fullName>NewMobile</fullName>
                <label>Alta Móvel</label>
            </value>
            <value>
                <fullName>Aquisição Home Assist</fullName>
            </value>
            <value>
                <fullName>Aquisição</fullName>
            </value>
            <value>
                <fullName>Base Home Assist</fullName>
            </value>
            <value>
                <fullName>Base</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>