force-app/main/default/objects/Offer__c/fields/PlanTotalPrice__c.field-meta.xml
<CustomField>
    <fullName>PlanTotalPrice__c</fullName>
    <label>Preço Total do Planos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>