force-app/main/default/objects/Offer__c/fields/PromotionGroup__c.field-meta.xml
<CustomField>
    <fullName>PromotionGroup__c</fullName>
    <label>Grupo de Promoção</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Aquisição BL Avulsa</fullName>
            </value>
            <value>
                <fullName>Aquisição 2P</fullName>
            </value>
            <value>
                <fullName>Rentabilização 2P</fullName>
            </value>
            <value>
                <fullName>Aquisição Full</fullName>
            </value>
            <value>
                <fullName>Aquisição DUO Full</fullName>
            </value>
            <value>
                <fullName>Rentabilização Full</fullName>
            </value>
            <value>
                <fullName>Rentabilização Ultimate</fullName>
            </value>
            <value>
                <fullName>Rentabilização DUO DTH</fullName>
            </value>
            <value>
                <fullName>Rentabilização DTH</fullName>
            </value>
            <value>
                <fullName>Rentabilização 3P DTH</fullName>
            </value>
            <value>
                <fullName>Conteúdos de Vídeo</fullName>
            </value>
            <value>
                <fullName>Aquisição DUO Super</fullName>
            </value>
            <value>
                <fullName>Rentabilização</fullName>
            </value>
            <value>
                <fullName>Rentabilização DUO Full</fullName>
            </value>
            <value>
                <fullName>Rentabilização Híbrido</fullName>
            </value>
            <value>
                <fullName>Rentabilização DUO Ultimate</fullName>
            </value>
            <value>
                <fullName>Rentabilização DUO Super</fullName>
            </value>
            <value>
                <fullName>Rentabilização Super</fullName>
            </value>
            <value>
                <fullName>Rentabilização BL Avulsa</fullName>
            </value>
            <value>
                <fullName>Aquisição DUO Ultimate</fullName>
            </value>
            <value>
                <fullName>Aquisição Ultimate</fullName>
            </value>
            <value>
                <fullName>Aquisição Super</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>