force-app/main/default/objects/Offer__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <label>Sistema de Origem</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atlys</fullName>
            </value>
            <value>
                <fullName>Vivo Next</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>