force-app/main/default/objects/Offer__c/fields/Streaming__c.field-meta.xml
<CustomField>
    <fullName>Streaming__c</fullName>
    <label>Streaming</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Streaming</valueSetName>
    </valueSet>
</CustomField>