force-app/main/default/objects/Offer__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Tecnologia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FTTC</fullName>
            </value>
            <value>
                <fullName>FTTH</fullName>
            </value>
            <value>
                <fullName>XDSL</fullName>
            </value>
            <value>
                <fullName>FTTH/FTTC</fullName>
                <isActive>false</isActive>
                <label>FTTH/FTTC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>