force-app/main/default/objects/Offer__c/fields/TotalDiscount__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscount__c</fullName>
    <label>Desconto Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>