force-app/main/default/objects/Offer__c/fields/TVAttribute__c.field-meta.xml
<CustomField>
    <fullName>TVAttribute__c</fullName>
    <description>Nome do pacote de TV</description>
    <label>Plano de TV</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plano 1</fullName>
            </value>
            <value>
                <fullName>Plano 2</fullName>
            </value>
            <value>
                <fullName>Plano 3</fullName>
            </value>
            <value>
                <fullName>Plano 4</fullName>
            </value>
            <value>
                <fullName>Plano 5</fullName>
            </value>
            <value>
                <fullName>Vivo Play Básico</fullName>
            </value>
            <value>
                <fullName>Vivo Play Completo</fullName>
            </value>
            <value>
                <fullName>Full HD Futebol</fullName>
            </value>
            <value>
                <fullName>Vivo Play Padrão</fullName>
            </value>
            <value>
                <fullName>Vivo Play Essencial</fullName>
            </value>
            <value>
                <fullName>Super HD Futebol</fullName>
            </value>
            <value>
                <fullName>Vivo Play Avançado</fullName>
            </value>
            <value>
                <fullName>Ultimate HD Futebol</fullName>
            </value>
            <value>
                <fullName>Vivo Play Ultra</fullName>
            </value>
            <value>
                <fullName>Ultra HD Futebol</fullName>
            </value>
            <value>
                <fullName>Ultimate HD</fullName>
            </value>
            <value>
                <fullName>Standard HD</fullName>
            </value>
            <value>
                <fullName>Super HD</fullName>
            </value>
            <value>
                <fullName>Ultra HD</fullName>
            </value>
            <value>
                <fullName>Full HD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>