force-app/main/default/objects/Offer__c/fields/TVDescription__c.field-meta.xml
<CustomField>
    <fullName>TVDescription__c</fullName>
    <description>Descrição da Oferta TV</description>
    <label>Descrição Oferta TV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>