force-app/main/default/objects/Offer__c/fields/TVDiscount__c.field-meta.xml
<CustomField>
    <fullName>TVDiscount__c</fullName>
    <description>Desconto do plano de TV</description>
    <label>Desconto TV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>