force-app/main/default/objects/Offer__c/fields/TVDiscountDuration__c.field-meta.xml
<CustomField>
    <fullName>TVDiscountDuration__c</fullName>
    <description>Campo para preenchimento da duração do desconto sobre o preço da TV.</description>
    <label>Duração Desconto TV</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>