force-app/main/default/objects/Offer__c/fields/TVPrice__c.field-meta.xml
<CustomField>
    <fullName>TVPrice__c</fullName>
    <description>Preço do plano de TV</description>
    <label>TV Prateleira</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>