force-app/main/default/objects/Offer__c/fields/TVPromoPrice__c.field-meta.xml
<CustomField>
    <fullName>TVPromoPrice__c</fullName>
    <label>Preço TV Promo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>