force-app/main/default/objects/Offer__c/fields/TypePlan__c.field-meta.xml
<CustomField>
    <fullName>TypePlan__c</fullName>
    <description>Utilizado para o cadastro de ofertas de alta de móvel</description>
    <label>Tipo de plano</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Controle</fullName>
            </value>
            <value>
                <fullName>Pós-pago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>