force-app/main/default/objects/Offer__c/fields/WhiteListCharacteristicOffer__c.field-meta.xml
<CustomField>
    <fullName>WhiteListCharacteristicOffer__c</fullName>
    <description>Campo utilizado para funcionalidade whitelist em ofertas de alta</description>
    <label>Características WhiteList</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VERMELHO</fullName>
            </value>
            <value>
                <fullName>AMARELO</fullName>
            </value>
            <value>
                <fullName>VERDE 1</fullName>
            </value>
            <value>
                <fullName>VERDE 2</fullName>
            </value>
            <value>
                <fullName>VERDE 3</fullName>
            </value>
            <value>
                <fullName>VERDE 4</fullName>
            </value>
            <value>
                <fullName>VERDE 5</fullName>
            </value>
            <value>
                <fullName>VERDE 6</fullName>
            </value>
            <value>
                <fullName>VERDE 7</fullName>
            </value>
            <value>
                <fullName>VERDE 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>