force-app/main/default/objects/Offer__c/recordTypes/AcquisitionFixed.recordType-meta.xml
<RecordType>
    <fullName>AcquisitionFixed</fullName>
    <active>true</active>
    <label>Aquisição Fixa</label>
</RecordType>