force-app/main/default/objects/Offer__c/recordTypes/AltaFixa.recordType-meta.xml
<RecordType>
    <fullName>AltaFixa</fullName>
    <active>true</active>
    <description>Ofertas de Alta para Fixa</description>
    <label>Alta Fixa</label>
</RecordType>