force-app/main/default/objects/Offer__c/recordTypes/AltaMovel.recordType-meta.xml
<RecordType>
    <fullName>AltaMovel</fullName>
    <active>true</active>
    <description>Ofertas de Alta para Móvel</description>
    <label>Alta Móvel</label>
</RecordType>