force-app/main/default/objects/Offer__c/recordTypes/BaseFixaOLD.recordType-meta.xml
<RecordType>
    <fullName>BaseFixaOLD</fullName>
    <active>true</active>
    <description>Ofertas de Alta para Fixa</description>
    <label>Base FixaOLD</label>
</RecordType>