force-app/main/default/objects/Offer__c/recordTypes/BaseFixed.recordType-meta.xml
<RecordType>
    <fullName>BaseFixed</fullName>
    <active>true</active>
    <description>Ofertas de Alta para Fixa</description>
    <label>Base Fixa</label>
</RecordType>