force-app/main/default/objects/Offer__c/recordTypes/Fixa.recordType-meta.xml
<RecordType>
    <fullName>Fixa</fullName>
    <active>true</active>
    <description>Ofertas Fixa de Retenção</description>
    <label>Fixa</label>
</RecordType>