force-app/main/default/objects/Offer__c/recordTypes/ITV.recordType-meta.xml
<RecordType>
    <fullName>ITV</fullName>
    <active>true</active>
    <label>ITV</label>
</RecordType>