force-app/main/default/objects/Offer__c/recordTypes/ITVAltaMovel.recordType-meta.xml
<RecordType>
    <fullName>ITVAltaMovel</fullName>
    <active>true</active>
    <label>ITV Alta Móvel</label>
</RecordType>