force-app/main/default/objects/Offer__c/recordTypes/Movel.recordType-meta.xml
<RecordType>
    <fullName>Movel</fullName>
    <active>true</active>
    <description>Ofertas Móvel de Retenção</description>
    <label>Móvel</label>
</RecordType>