force-app/main/default/objects/Offer__c/recordTypes/OfferBook.recordType-meta.xml
<RecordType>
    <fullName>OfferBook</fullName>
    <active>true</active>
    <description>Ofertas do Book de Ofertas</description>
    <label>Book de Ofertas</label>
</RecordType>