force-app/main/default/objects/Offer__c/recordTypes/ServicosAdicionais.recordType-meta.xml
<RecordType>
    <fullName>ServicosAdicionais</fullName>
    <active>true</active>
    <description>Serviços Adicionais</description>
    <label>Serviços Adicionais</label>
</RecordType>