force-app/main/default/objects/Offer__c/validationRules/CheckFixedLineDescriptionRule.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckFixedLineDescriptionRule</fullName>
    <active>true</active>
    <description>Verifica se a descrição da oferta de voz é obrigatória.</description>
    <errorConditionFormula>AND(
FixedLinePlanAttribute__c = true,
ISBLANK(FixedLineDescription__c)
)</errorConditionFormula>
    <errorDisplayField>FixedLineDescription__c</errorDisplayField>
    <errorMessage>Favor, preencher o campo Descrição Oferta Voz para que a operação seja realizada.</errorMessage>
</ValidationRule>